--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,12 @@ body {
   width: 400px;
   height: 500px;
   text-align: center;
-  padding: 10px;
+  padding: 10px 10px 0 10px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 5px;
+  overflow: hidden;
+  gap: 10px;
 }
 
 .cover-image {
@@ -36,20 +37,20 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  border-radius: 15px;
+  border-radius: 15px 15px 0 0;
 }
 .control-card {
   padding: 5px;
   position: relative;
-  width: 100%;
+  width: 400px;
   height: 150px;
-  background-color: #eceaea;
-  border-radius: 12px;
-  border: 1px solid gray;
+  background-color: #2b2b2b;
+  border-radius: 0px 0px 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: wheat;
 }
 
 .controls {
@@ -62,7 +63,8 @@ body {
 }
 .artist-name {
   font-size: 15px;
-  color: #555;
+  font-weight: 500;
+  color: rgb(246, 206, 132);
 }
 
 .time {
@@ -71,19 +73,22 @@ body {
   justify-content: space-between;
 }
 .progress-bar {
+  margin-top: 5px;
   height: 7px;
   width: 100%;
   border-radius: 10px;
-  border: 1px solid lightgray;
   background-color: #999999;
-  overflow: hidden;
 }
-
+.progress-bar:hover {
+  cursor: pointer;
+  transform: scaleY(1.3);
+}
 .fill-bar {
-  position: sticky;
-  background-color: #333;
+  background-color: #000;
   width: 25%;
   height: 100%;
+  border-radius: 10px 0 0 10px;
+  box-shadow: 1px 2px 5px black;
 }
 
 .control-buttons menu {
@@ -94,6 +99,10 @@ body {
   text-decoration: none;
   gap: 25px;
   margin: 10px 0 0 30px;
+}
+
+.control-buttons i {
+  color: wheat;
 }
 
 .control-buttons li {
